feat: jep executor